--- a/index.html
+++ b/index.html
@@ -11,7 +11,37 @@
 </head>
 
 <body>
-    Trillo
+
+    <div class="container">
+        <header class="header">
+            <img src="images/logo.png" alt="Logo" class="logo">
+            <form action="#" class="search">
+                <input type="text" class="search__input" placeholder="Search hotels">
+                <button class="search__button">
+                    <img src="images/SVG/magnifying-glass.svg" alt="Magnifying glass">
+                </button>
+            </form>
+            <nav class="user-nav">
+                <div class="user-nav__icon-box">
+                    <img src="images/SVG/bookmark.svg" alt="Bookmark" class="user-nav__icon">
+                    <span class="user-nav__notification">7</span>
+                </div>
+                <div class="user-nav__icon-box">
+                    <img src="images/SVG/bookmark.svg" alt="Bookmark" class="user-nav__icon">
+                    <span class="user-nav__notification">13</span>
+                </div>
+                <div class="user-nav__user">
+                    <img src="images/DSC_9433.jpg" alt="User photo" class="user-nav__user-photo">
+                    <span class="user-nav__user-name">Tomek</span>
+                </div>
+            </nav>
+        </header>
+        <div class="content">
+            <nav class="sidebar">Navigation</nav>
+            <main class="hotel-view">Hotel view</main>
+        </div>
+    </div>
+
 </body>
 
 </html>
