Styling Header - search bar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <form action="#" class="search">
                 <input type="text" class="search__input" placeholder="Search hotels">
                 <button class="search__button">
-                    <img src="images/SVG/magnifying-glass.svg" alt="Magnifying glass">
+                    <img src="images/SVG/magnifying-glass.svg" alt="Magnifying glass" class="search__icon">
                 </button>
             </form>
             <nav class="user-nav">
