Finished header css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <span class="user-nav__notification">7</span>
                 </div>
                 <div class="user-nav__icon-box">
-                    <img src="images/SVG/bookmark.svg" alt="Bookmark" class="user-nav__icon">
+                    <img src="images/SVG/chat.svg" alt="Chat" class="user-nav__icon">
                     <span class="user-nav__notification">13</span>
                 </div>
                 <div class="user-nav__user">
