Styling side navigation

--- a/index.html
+++ b/index.html
@@ -37,7 +37,37 @@
             </nav>
         </header>
         <div class="content">
-            <nav class="sidebar">Navigation</nav>
+            <nav class="sidebar">
+                <ul class="side-nav">
+                    <li class="side-nav__item">
+                        <a href="#" class="side-nav__link">
+                            <img src="images/SVG/home.svg" alt="Hotel" class="side-nav__icon">
+                            <span>Hotel</span>
+                        </a>
+                    </li>
+                    <li class="side-nav__item">
+                        <a href="#" class="side-nav__link">
+                            <img src="images/SVG/aircraft.svg" alt="Aircraft" class="side-nav__icon">
+                            <span>Flight</span>
+                        </a>
+                    </li>
+                    <li class="side-nav__item">
+                        <a href="#" class="side-nav__link">
+                            <img src="images/SVG/key.svg" alt="Key" class="side-nav__icon">
+                            <span>Car rental</span>
+                        </a>
+                    </li>
+                    <li class="side-nav__item">
+                        <a href="#" class="side-nav__link">
+                            <img src="images/SVG/map.svg" alt="Map" class="side-nav__icon">
+                            <span>Tours</span>
+                        </a>
+                    </li>
+                </ul>
+                <div class="legal">
+                    &copy; 2018 by Tomek. All rights reserved.
+                </div>
+            </nav>
             <main class="hotel-view">Hotel view</main>
         </div>
     </div>
