--- a/index.html
+++ b/index.html
@@ -68,7 +68,19 @@
                     &copy; 2018 by Tomek. All rights reserved.
                 </div>
             </nav>
-            <main class="hotel-view">Hotel view</main>
+            <main class="hotel-view">
+                <div class="gallery">
+                    <figure class="gallery__item">
+                        <img src="images/hotel-1.jpg" alt="Hotel 1" class="gallery__photo">
+                    </figure>
+                    <figure class="gallery__item">
+                        <img src="images/hotel-2.jpg" alt="Hotel 2" class="gallery__photo">
+                    </figure>
+                    <figure class="gallery__item">
+                        <img src="images/hotel-3.jpg" alt="Hotel 3" class="gallery__photo">
+                    </figure>
+                </div>
+            </main>
         </div>
     </div>
 
