Review section - HTML

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         </ul>
                         <div class="recommend">
                             <p class="recommend__count">
-                                Andrew and 3 other friends recommend this hotel. 
+                                Andrew and 3 other friends recommend this hotel.
                             </p>
                             <div class="recommend__friends">
                                 <img src="images/user-3.jpg" alt="Friend 1" class="recommend__photo">
@@ -131,7 +131,22 @@
                             </div>
                         </div>
                     </div>
-                    <div class="user-review">User review</div>
+                    <div class="user-review">
+                        <figure class="review">
+                            <blockquote class="review__text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi, totam, itaque officia ex.
+                            </blockquote>
+                            <figcaption class="review__user">
+                                <img src="images/user-1.jpg" alt="User 1" class="review__photo">
+                                <div class="review__user-box">
+                                    <p class="review__user-name">John Anderson</p>
+                                    <p class="review__user-date">Jan 18th, 2018</p>
+                                    <div class="review__rating">8.4</div>
+                                </div>
+                            </figcaption>
+
+                        </figure>
+                    </div>
                 </div>
             </main>
         </div>
