Review section - HTML

--- a/index.html
+++ b/index.html
@@ -144,7 +144,20 @@
                                     <div class="review__rating">8.4</div>
                                 </div>
                             </figcaption>
+                        </figure>
 
+                        <figure class="review">
+                            <blockquote class="review__text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi.
+                            </blockquote>
+                            <figcaption class="review__user">
+                                <img src="images/user-1.jpg" alt="User 1" class="review__photo">
+                                <div class="review__user-box">
+                                    <p class="review__user-name">John Anderson</p>
+                                    <p class="review__user-date">Jan 18th, 2018</p>
+                                    <div class="review__rating">8.4</div>
+                                </div>
+                            </figcaption>
                         </figure>
                     </div>
                 </div>
