Styling review section

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                                 <img src="images/user-1.jpg" alt="User 1" class="review__photo">
                                 <div class="review__user-box">
                                     <p class="review__user-name">John Anderson</p>
-                                    <p class="review__user-date">Jan 18th, 2018</p>
-                                    <div class="review__rating">8.4</div>
+                                    <p class="review__user-date">Dec 10th, 2017</p>
                                 </div>
+                                <div class="review__rating">8.8</div>
                             </figcaption>
                         </figure>
 
@@ -151,12 +151,12 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi.
                             </blockquote>
                             <figcaption class="review__user">
-                                <img src="images/user-1.jpg" alt="User 1" class="review__photo">
+                                <img src="images/user-2.jpg" alt="User 2" class="review__photo">
                                 <div class="review__user-box">
-                                    <p class="review__user-name">John Anderson</p>
+                                    <p class="review__user-name">Anna Kowalska</p>
                                     <p class="review__user-date">Jan 18th, 2018</p>
-                                    <div class="review__rating">8.4</div>
                                 </div>
+                                <div class="review__rating">8.1</div>
                             </figcaption>
                         </figure>
                     </div>
